--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,7 +2,7 @@
 
 :root {
   --background: #f4f4f4;
-  --foreground: #171717;
+  /* --foreground: #171717; */
 }
 
 @theme inline {
@@ -26,7 +26,9 @@ body {
   margin: 0px;
   padding: 0px;
 }
-.nav_sec{
+
+
+nav{
   border: 1px solid transparent;
   background-color: black;
 }
@@ -34,7 +36,7 @@ body {
   margin-left: 100px;
   margin-top: 25px;
 }
-.nav_name{
+.navbar{
   display: inline-block;
   margin-right: 50px;
   font-size: 30px;
@@ -43,7 +45,7 @@ body {
   cursor: pointer;
   color: #ffffff;
 }
-.nav_name:hover{
+.navbar:hover{
   color: rgba(255, 255, 255, 0.7);
 }
 .projects_sec {
@@ -53,17 +55,4 @@ body {
   background-color: #f5f5f5;
   border-radius: 12px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-}
-
-.section-title {
-  font-size: 24px;
-  margin-bottom: 16px;
-  color: #333;
-  text-align: center;
-}
-.alpha-list {
-  list-style-type: lower-alpha; 
-  padding-left: 22px;           
-  font-size: 18px;
-  color: #333;
 }
