--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,8 +1,8 @@
 @import "tailwindcss";
 
 :root {
-  --background: #f4f4f4;
-  /* --foreground: #171717; */
+  /* --background: #000000; */
+  --foreground: #000000;
 }
 
 @theme inline {
@@ -25,34 +25,4 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   margin: 0px;
   padding: 0px;
-}
-
-
-nav{
-  border: 1px solid transparent;
-  background-color: black;
-}
-.navbar{
-  margin-left: 100px;
-  margin-top: 25px;
-}
-.navbar{
-  display: inline-block;
-  margin-right: 50px;
-  font-size: 30px;
-  font-family: Arial, Helvetica, sans-serif;
-  margin-bottom: 25px;
-  cursor: pointer;
-  color: #ffffff;
-}
-.navbar:hover{
-  color: rgba(255, 255, 255, 0.7);
-}
-.projects_sec {
-  margin: 40px auto;
-  padding: 20px;
-  max-width: 600px;
-  background-color: #f5f5f5;
-  border-radius: 12px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
